[gd_scene load_steps=4 format=3 uid="uid://d15m2hl5mwvs5"]

[ext_resource type="Script" path="res://Game_main/Game_start/empty_space.gd" id="1_lmv0f"]
[ext_resource type="Texture2D" uid="uid://c6eel4il3cclj" path="res://ARTS/Icons/Hearth.png" id="2_uhtgb"]
[ext_resource type="Texture2D" uid="uid://c5qg2342e1if3" path="res://ARTS/Icons/Sword.png" id="3_7n6ok"]

[node name="Empty_space" type="Node2D"]
script = ExtResource("1_lmv0f")

[node name="sprite_space" type="Sprite2D" parent="."]
scale = Vector2(3.5, 3.5)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -49.0
offset_top = -63.0
offset_right = 49.0
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 2

[node name="HP" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.729412, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 30

[node name="hp_icon" type="TextureRect" parent="HBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("2_uhtgb")
expand_mode = 2
stretch_mode = 5

[node name="attack" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.537255, 0.988235, 0.792157)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 30

[node name="attac_icon" type="TextureRect" parent="HBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("3_7n6ok")
expand_mode = 2
